hack/openshift-objects/gateway/istio-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: infra-simple-inference-gateway-istio
  namespace: llm-d
  labels:
    kuadrant.io/gateway: "true"
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: infra-simple-inference-httproute
  namespace: llm-d
spec:
  parentRefs:
  - name: infra-simple-inference-gateway-istio
    namespace: llm-d
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: llm-d-inference-gateway-istio #Name of the service fronting the LLM
      port: 80
